[package]
name = "json-key-from-value"
version = "0.1.0"
edition = "2021"
authors = ["Chris Down <chris@chrisdown.name>"]
description = "Find the key or index that provides a value in a big blob of JSON."
repository = "https://github.com/cdown/json-key-from-value"
readme = "README.md"
keywords = ["json"]
categories = ["command-line-utilities"]
license = "MIT"
rust-version = "1.74"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.22", features = ["derive"] }
simd-json = "0.14.3"

[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
predicates = "3.1.2"
tempfile = "3.14.0"

[[bench]]
name = "benchmark"
harness = false
